# python-sample

./: README.md  pyproject.toml
src/example_blog/: cmdline.py  dao.py  db.py  log.py  middlewares.py  routes.py  schemas.py  server.py  services.py  views.py
src/example_blog/config/: __init__.py  settings.yml
tests/: __init__.py
