[tool.poetry]
name = "example-blog"
version = "0.1.0"
description = ""
authors = ["guxu <Xu.GU@cn.bosch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
dynaconf = "^3.2.4"
sqlalchemy = "^2.0.23"
mysqlclient = "^2.2.1"
pydantic = "^2.5.3"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
example_blog = "example_blog.cmdline:main"
